<resources>
    <string name="app_name">TexasAndroid</string>
    <string name="title_activity_tst_delete">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_button_text">Register</string>


    <!-- host -->
    <string name="service_host">10.0.2.2:8080</string>
    <string name="token_check_path">token</string>

    <!--main-->
    <string name="games_button_text">View Games</string>
    <string name="profile_button_text">View Profile</string>
    <string name="user_text_view">User: </string>
    <string name="log_out">Log Out</string>

    <!--games list -->
    <string name="games_list_text">Active Games</string>
    <string name="new_game_button_text">New Game</string>
    <string name="show_games_button">Refresh</string>

    <!-- login/register -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="action_register">Register</string>

    <!-- game -->
    <string name="game_title_default">Game Title</string>
    <string name="fold_button_text">Fold</string>
    <string name="bet_button_text">Bet</string>
    <string name="total_pot">Pot: </string>
    <string name="amount_to_call">Amount to call: </string>
    <string name="minimum_bet">Minimum bet: </string>
    <string name="game_state">Game state: </string>
    <string name="game_info_default">Game info</string>
    <string name="call_button_text">Call</string>
    <string name="time_remaining">Time Remaining: </string>
    <string name="start_game_text">Start Game</string>
</resources>
