<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/user_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_text_view"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/games_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games_button_text" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_button_text" />

    </LinearLayout>



</LinearLayout>