<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.GamesActivity">

    <TextView
        android:id="@+id/active_games_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_list_text"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="400dp">
    </FrameLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/games_list"-->
        <!--android:orientation="vertical"-->
        <!--android:gravity="top"-->
        <!--&gt;</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/show_games_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_games_button" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_button_text" />

    </LinearLayout>





</LinearLayout>